Bug: Ajustar colores y contrastres

--- a/cd2024bfs5g1-frontend/src/main/ngx/src/assets/css/workwander.scss
+++ b/cd2024bfs5g1-frontend/src/main/ngx/src/assets/css/workwander.scss
@@ -330,6 +330,15 @@ nav.ng-star-inserted:nth-last-child(2) {
 
   :hover {
     border-left: 0px solid $accent !important;
+
+    //cambio de color del icono y del tex
+    span.o-app-sidenav-menuitem-title {
+      color: black;
+    }
+  
+    mat-icon.mat-icon.notranslate.material-icons.mat-ligature-font.mat-icon-no-color.ng-star-inserted {
+      color: black;
+    }
   }
   .mdc-button__label > div {
     justify-content: center !important;
@@ -929,7 +938,7 @@ o-snackbar .o-snackbar-message {
     display: flex;
 
     mat-icon {
-      color: #d3b403;
+      color: $amarillo;
       margin-right: 5px;
     }
   }
@@ -1124,7 +1133,13 @@ td.cdk-column-deleteCoworking.mat-column-deleteCoworking {
   }
 }
 //reviews
+
+              
 .review {
+  p-rating{
+    color: $amarillo;
+  }
+          
   .review-title {
     margin-left: 16px;
   }
@@ -1145,7 +1160,7 @@ td.cdk-column-deleteCoworking.mat-column-deleteCoworking {
   }
 
   .media_rating {
-    color: #d3b403;
+    color: $amarillo;
     transform: scale(1.5);
     padding-left: 8px;
   }
@@ -1619,14 +1634,6 @@ td.cdk-column-deleteCoworking.mat-column-deleteCoworking {
     height: 50px !important;
     border-bottom: 3px solid $blanco !important;
   }
-
-//Unificacion color en modal de Mis coworkings en coworking-edit
-  .mat-mdc-dialog-container {
-    --mdc-dialog-container-color: #e9e9e9 !important;
-    --mdc-dialog-with-divider-divider-color: rgba(0, 0, 0, 0.12);
-    --mdc-dialog-subhead-color: rgba(0, 0, 0, 0.87);
-    --mdc-dialog-supporting-text-color: rgba(0, 0, 0, 0.6);
-  }
 }
 
 tr.mat-mdc-row {
@@ -1664,4 +1671,11 @@ textarea,
 input {
   font-size: 100%;
   background-color: #c0d4c6;
+}
+
+::ng-deep mdc-dialog__container mat-mdc-dialog-container {
+  --mdc-dialog-container-color: red !important;
+  --mdc-dialog-with-divider-divider-color: rgba(0, 0, 0, 0.12);
+  --mdc-dialog-subhead-color: rgba(0, 0, 0, 0.87);
+  --mdc-dialog-supporting-text-color: rgba(0, 0, 0, 0.6);
 }
